# clrypt

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: semgrep.yml
clrypt/: __init__.py  encdir.py  openssl.py
test/: test_clrypt.py  test_encdir.py  test_openssl.py
test/test-cert/: test.crt
test/test-clrypt/encrypted/testing/: 05f8ef9229fe21844aacfe2ec6e63e2b-content.yml.smime
tests/: test_clrypt.py  test_encdir.py  test_openssl.py
tests/test-cert/: test.dem
