[tool.poetry]
name = "clrypt"
version = "0.2.4"
description = "A tool to encrypt/decrypt files."
authors = ["Color Health"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2"
PyYAML = ">=3.11"
pyasn1 = ">=0.1.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
